Several small modifications in style, layout, background image, sass additions, icons and visual improvements

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "sass": "sass ./src/sass/styles.scss ./src/css/styles.css",
     "styles": "sass ./src/sass/styles.scss ./src/css/styles.css --watch"
   },
   "dependencies": {
